--- a/pom.xml
+++ b/pom.xml
@@ -49,10 +49,16 @@
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
         
-        <!-- Database -->
+        <!-- Databases -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
         
@@ -98,5 +104,7 @@
                 </configuration>
             </plugin>
         </plugins>
+            <finalName>app</finalName>
+
     </build>
 </project>
